[project]
name = "openapi-test"
version = "0.1.0"
description = "Your API project"
requires-python = ">=3.14"
dependencies = [
  "argon2-cffi",
  "click",
  "fastapi==0.135.2",
  "pydantic==2.12.5",
  "PyJWT",
  "python-multipart",
  "sqlmodel",
  "uvicorn==0.42.0",
]

[tool.hatch.envs.default.env-vars]
PYTHONPATH = "src"

[tool.hatch.envs.default.scripts]
backend = "python -c \"from api.main import main; main()\""
backend-cli = "python src/cli.py {args:reset_db}"
backend-integration-tests = "pytest tests/integration"

[build-system]
requires = ["hatchling>=1.17.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["src/**"]